[package]
name = "resign-jwt"
version = "0.1.0"
authors = ["Daniel Mason <daniel@danielmason.com>"]
edition = "2018"
description = "Allows you to quickly and safely resign a jwt"
repository = "https://github.com/Gisleburt/resign-jwt"
readme = "README.md"
categories = ["authentication", "command-line-utilities", "development-tools"]
license = "MIT"

[dependencies]
structopt="0.2"
frank_jwt = "3.1.1"
base64 = "0.10.1"
serde = "1.0"
serde_json = "1.0"
